buildscript {
    repositories {
        mavenCentral()
        jcenter()
    }
    dependencies {
        classpath 'com.bmuschko:gradle-docker-plugin:3.2.5'
    }
}


plugins {
    id 'java'
    id 'application'
    id 'org.springframework.boot' version '2.0.2.RELEASE'
    id 'io.spring.dependency-management' version '1.0.5.RELEASE'
}

apply plugin: 'com.bmuschko.docker-java-application'

docker {
    registryCredentials {
        url = 'https://netifi.azurecr.io'
        username = 'netifi'
        password = 'xv06MJfkZA17wCmy1v9e7kanMtvTsg5+'
    }
    javaApplication {
        baseImage = 'openjdk:8-jre-alpine'
        maintainer = 'Netifi'
        ports = []
        tag = "netifi.azurecr.io/fanout/fanout-client:latest"
    }
}

sourceCompatibility = 1.8

dependencyManagement {
    imports {
        mavenBom "io.spring.platform:platform-bom:${springbomVersion}"
    }
}

dependencies {
    compile project(':count-vowels-service-idl')
    compile project(':random-string-service-idl')

    compile 'com.netifi.proteus:proteus-spring-boot-starter:0.3.2'
}

mainClassName = 'io.netifi.proteus.fanout.client.Main'

applicationDefaultJvmArgs = [
        '-XX:+UnlockExperimentalVMOptions',
        '-XX:+UseCGroupMemoryLimitForHeap',
        '-XX:MaxRAMFraction=1',
        '-XX:+UseG1GC',
        '-XX:MaxGCPauseMillis=200',
        '-XX:+AlwaysPreTouch',
        '-XX:+UseStringDeduplication',
        '-XX:+ExplicitGCInvokesConcurrent',
        '-XX:+ParallelRefProcEnabled',
        '-XX:HeapDumpPath=/',
        '-XX:+PrintGCDateStamps',
        '-verbose:gc',
        '-XX:+PrintGCDetails',
        '-Xloggc:gc.log',
        '-XX:+UseGCLogFileRotation',
        '-XX:NumberOfGCLogFiles=10',
        '-XX:GCLogFileSize=100M'
]

configurations.all {
    resolutionStrategy {
        dependencySubstitution {
            substitute module('com.google.guava:guava') with module('com.google.guava:guava:22.0')
        }
    }
}